--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 
 executors:
   default:
-    working_directory: ~/mattermost-webapp
+    working_directory: ~/go/src/github.com/mattermost
     docker:
       - image: mattermost/mattermost-build-webapp:oct-2-2018
   ubuntu:
