--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,7 @@ jobs:
           echo "$WEBAPP_GIT_COMMIT"
           curl -f -o ./dist.tar.gz https://releases.mattermost.com/mattermost-webapp/commit/${WEBAPP_GIT_COMMIT}/mattermost-webapp.tar.gz && mkdir ./dist && tar -xvf ./dist.tar.gz -C ./dist --strip-components=1 || make node_modules test build
       - persist_to_workspace:
-          root: /go/src/github.com/mattermost
+          root: ~/go/src/github.com/mattermost
           paths:
             - mattermost-server
             - mattermost-webapp
