--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,6 +30,7 @@ jobs:
       - persist_to_workspace:
           root: /go/src/github.com/mattermost
           paths:
+            - mattermost-server
             - mattermost-webapp
   test:
     executor:
