--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,7 +42,7 @@ jobs:
           name: Run Docker compose
           command: |
             ls -la
-            cd mattermost-server/build
+            cd build
             docker-compose --no-ansi run --rm start_dependencies
             cat ../tests/test-data.ldif | docker-compose --no-ansi exec -T openldap bash -c 'ldapadd -x -D "cn=admin,dc=mm,dc=test,dc=com" -w mostest';
             docker-compose --no-ansi exec -T minio sh -c 'mkdir -p /data/mattermost-test';
@@ -57,7 +57,6 @@ jobs:
       - run:
           name: Run Tests
           command: |
-            cd mattermost-server
             mkdir -p client/plugins
             docker run -it --net circleci_mm-test \
               --env TEST_DATABASE_MYSQL_DSN="mmuser:mostest@tcp(mysql:3306)/mattermost_test?charset=utf8mb4,utf8\u0026readTimeout=30s\u0026writeTimeout=30s" \
@@ -83,7 +82,7 @@ jobs:
           name: Capture docker logs
           when: always
           command: |
-            cd mattermost-server/build
+            cd build
             # Capture docker logs
             mkdir -p logs
             docker-compose logs --tail="all" -t --no-color > logs/docker-compose_logs
@@ -95,7 +94,6 @@ jobs:
       - run:
           when: always
           command: |
-            cd mattermost-server/
             mkdir -p test-results
             cp report.xml test-results
       - store_test_results:
