--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,7 +58,8 @@ jobs:
       - run:
           name: Run Tests
           command: |
-            ls -la
+            ls -la ~/go/src/github.com/mattermost/mattermost-server
+            echo "-----See here-----"
             cat Makefile
             mkdir -p client/plugins
             docker run -it --net circleci_mm-test \
@@ -76,8 +77,8 @@ jobs:
               --env MM_EMAILSETTINGS_SMTPSERVER=inbucket \
               --env MM_EMAILSETTINGS_SMTPPORT=10025 \
               --env MM_ELASTICSEARCHSETTINGS_CONNECTIONURL=http://elasticsearch:9200 \
-              -v ~/go/src:/go/src \
-              -w /go/src/github.com/mattermost/mattermost-server \
+              -v ~/go/src:~/go/src \
+              -w ~/go/src/github.com/mattermost/mattermost-server \
               mattermost/mattermost-build-server:feb-28-2019 \
               bash -c 'make test-server BUILD_NUMBER="$CIRCLE_BRANCH-$CIRCLE_PREVIOUS_BUILD_NUM" TESTFLAGS= TESTFLAGSEE='
           no_output_timeout: 1h
