[MM-11854] Adds i18n step in workflow

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -120,6 +120,9 @@ workflows:
   untagged-build:
     jobs:
       - setup
-      - test:
+      - check-i18n:
           requires:
             - setup
+      - test:
+          requires:
+            - check-i18n
