[MM-11854] Changes executor for i18n step

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ jobs:
 
   check-i18n:
     executor:
-      name: default
+      name: ubuntu
     steps:
       - run:
           name: Check i18n
