[MM-11854] Adds checkout in i18n step

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,6 +37,7 @@ jobs:
     executor:
       name: ubuntu
     steps:
+      - checkout
       - run:
           name: Check i18n
           command: |
