--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,6 +38,8 @@ jobs:
       name: ubuntu
     steps:
       - checkout
+      - attach_workspace:
+          at: ~/go/src/github.com/mattermost/
       - run:
           name: Check i18n
           command: |
