--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,11 +43,9 @@ jobs:
       - run:
           name: Check i18n
           command: |
-            docker run -it \
-              -v ~/go/src:/go/src \
-              -w /go/src/github.com/mattermost/mattermost-server \
-              mattermost/mattermost-build-server:feb-28-2019 \
-              bash -c 'cp i18n/en.json /tmp/en.json; make i18n-extract; diff /tmp/en.json i18n/en.json;'
+            cp i18n/en.json /tmp/en.json 
+            make i18n-extract
+            diff /tmp/en.json i18n/en.json
 
   test:
     executor:
