[MM-11854] Adds build step in workflow

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -149,3 +149,7 @@ workflows:
       - test:
           requires:
             - setup
+      - build:
+          requires:
+            - setup
+          
