[MM-11854-test] Adds a step to check the working directory

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -138,6 +138,14 @@ jobs:
       - store_artifacts:
           path: /go/src/github.com/mattermost/mattermost-server/test-results/
 
+  build-docker:
+    executor: 
+      name: ubuntu
+    steps:
+        - run:
+            name: Build Dcoker image
+            command: |
+              ls -la
 workflows:
   version: 2
   untagged-build:
@@ -152,4 +160,7 @@ workflows:
       - build:
           requires:
             - test
-          
+      - build-docker:
+          requires:
+            - build
+
